# cnAgentOS

./: README.md  app.md  app.py  pyproject.toml  requirements.md  test.py
alembic/versions/: 0002_auth_session_permissions.py  0003_remove_session_permission_snapshot.py  0004_activate_system_functions.py
app/: __init__.py
app/controllers/: __init__.py  admin_auth.py  admin_home.py  admin_menu.py  admin_model.py  admin_permission.py  admin_role.py  admin_user.py  auth.py  base.py  home.py
app/models/: __init__.py  ai_client.py  db.py  menu.py  model_config.py  permission.py  role.py  user.py  user_role.py
app/static/css/: base.css
app/static/js/: base.js
app/templates/: base.html  index.html  login.html
app/templates/admin/: index.html  login.html  welcome.html
app/templates/admin/menu/: list.html
app/templates/admin/model/: list.html
backend/alembic/versions/: 0006_phase2_navigation_entries.py  0007_merge_phase2_heads.py  0008_phase3_qa_security.py
backend/tests/: test_model_engine.py  test_qa_engine.py  test_qa_security.py
docs/api/: auth-and-rbac.md  conventions.md  question-answering.md
docs/context/: ai-memory.md  current-status.md  decisions.md  issues.md
frontend/src/: types.ts
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/styles/: main.css
frontend/src/utils/: display.ts
src/cnagentos/: security.py
src/cnagentos/controllers/: auth.py
src/cnagentos/models/: entities.py
src/cnagentos/services/: auth.py  bootstrap.py  platform.py
tests/: conftest.py  test_auth_and_rbac.py
(+17 files in other folders)
